<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VATCalculator</string>
    <string name="action_settings">Settings</string>

    <string name="beforeVAT">Price before VAT</string>
    <string name="beforeVAT_text">0.0</string>
    
    <string name="VAT">VAT</string>
    <string name="VAT_text">0.0</string>
    
    <string name="afterVAT">Price incl. VAT</string>
    <string name="afterVAT_Text">0.0</string>

</resources>
